--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -4,6 +4,7 @@
 </title>
 <body>
     <h1>GGWP</h1>
+    <a href="{% url 'articles:classAndSubjects' %}">Question Maker</a>
 <a><form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
                                         {% csrf_token %}
                             <button type="submit" class="cr-btn cr-btn-sm">Logout</button>
