--- a/ots/main/templates/main/classAndSubjects.html
+++ b/ots/main/templates/main/classAndSubjects.html
@@ -19,6 +19,7 @@
   						<option value="10">Class 10</option>
     				</select>
         </div>
+		Select Subject
         <div class="form-input-wide" data-layout="half">
            <select class="time-dropdown form-dropdown" name="subject-Input" id="subject-Input">
   						<option value="bangla1">Bangla 1st Paper</option>
@@ -44,6 +45,9 @@
               Submit
             </button>
     </form>
+
+	<a href="{% url 'articles:canvas' %}">Accept and go to canvas</a>
+
 </head>
 <body>
 
