--- a/ots/main/templates/main/Canvas.html
+++ b/ots/main/templates/main/Canvas.html
@@ -20,5 +20,9 @@ Your canvas
 <a href="{% url 'articles:removequestion' canvass.id %}">Remove this question </a>
 {% endifequal %}
 {% endfor %}
+<br>
+<br>
+<br>
+<a href="{% url 'articles:questions' %}">Add a question</a>
 </body>
 </html>
