--- a/ots/main/templates/main/classAndSubjects.html
+++ b/ots/main/templates/main/classAndSubjects.html
@@ -25,7 +25,7 @@
   						<option value="bangla1">Bangla 1st Paper</option>
  						 <option value="bangla2">Bangla 2nd Paper</option>
  						 <option value="english1">English 1st Paper</option>
-						 <option value="enlish2">English 2nd Paper</option>
+						 <option value="english2">English 2nd Paper</option>
   						<option value="math">Math</option>
   						<option value="religion">Religion</option>
   						<option value="ict">ICT</option>
