--- a/ots/main/templates/main/QuestionGenerate.html
+++ b/ots/main/templates/main/QuestionGenerate.html
@@ -18,7 +18,23 @@
 
 {% endfor %}
 
-<button onclick="window.print()">Print</button>
+<button id="togglee" onclick="action(),window.print(), timeFunction()">Print</button>
 <br>
+<script>
+    var hidden = false;
+    function action() {
+        hidden = !hidden;
+        if(hidden) {
+            document.getElementById('togglee').style.visibility = 'hidden';
+        } else {
+            document.getElementById('togglee').style.visibility = 'visible';
+        }
+    }
+    function timeFunction() {
+            setTimeout(function(){
+             document.getElementById('togglee').style.visibility = 'visible';
+             }, 1000);
+        }
+</script>
 </body>
 </html>
