--- a/ots/main/templates/main/Canvas.html
+++ b/ots/main/templates/main/Canvas.html
@@ -22,7 +22,7 @@
 <br>
 <br>
 <br>
-<a href="{% url 'articles:questions' %}">Add a question</a>
+<a href="{% url 'articles:classAndSubjects' %}">Add a question</a>
 <a href="{% url 'articles:questionsGenerate' %}">Print Question</a>
 </body>
 </html>
