--- a/ots/main/templates/main/QuestionGenerate.html
+++ b/ots/main/templates/main/QuestionGenerate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>print</title>
+    <title></title>
 </head>
 <body>
 {% for canvass in canvass %}
