--- a/ots/main/templates/main/classAndSubjects.html
+++ b/ots/main/templates/main/classAndSubjects.html
@@ -50,7 +50,7 @@
 	{% if classInput and subjectInput %}
 	<h1>Class selected {{ classInput }}</h1>
 	<h1>Subject selected {{ subjectInput }}</h1>
-	<a href="{% url 'articles:canvas' %}">Accept and go to canvas</a>
+	<a href="{% url 'articles:questions' %}">Accept and get questions</a>
 	{% endif %}
 
 </head>
