Selective Question added

--- a/ots/main/templates/main/QuestionInput.html
+++ b/ots/main/templates/main/QuestionInput.html
@@ -7,5 +7,7 @@
 <body>
     <a href="{% url 'articles:bijoyinput' %}">Input Question in Bijoy</a>
     <a href="{% url 'articles:unicodeinput' %}">Input Question in Unicode</a>
+    <a href="{% url 'articles:bijoyinputSelective' %}">Input Selective Question in Bijoy</a>
+    <a href="{% url 'articles:unicodeinputSelective' %}">Input Selective Question in Unicode</a>
 </body>
 </html>
