--- a/ots/main/templates/main/QuestionGenerate.html
+++ b/ots/main/templates/main/QuestionGenerate.html
@@ -3,6 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+        <style type="text/css" media="print">
+    @page
+    {
+        size:  auto;   /* auto is the initial value */
+        margin: 0mm;  /* this affects the margin in the printer settings */
+    }
+
+    html
+    {
+        background-color: #FFFFFF;
+        margin: 0px;  /* this affects the margin on the html before sending to printer */
+    }
+
+    body
+    {
+        margin: 10mm 15mm 10mm 15mm; /* margin you want for the content */
+    }
+    </style>
 </head>
 <body>
 {% for canvass in canvass %}
