--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -5,6 +5,7 @@
 <body>
     <h1>Your Institute: {{ user.institution }}</h1>
     <h1>Your Point: {{ user.point }}</h1>
+    <a href="{% url 'articles:purchasePoint' %}">Buy Point</a>
     <a href="{% url 'articles:canvas' %}">Question Maker</a>
     <a href="{% url 'articles:user_profile' %}">User Profile</a>
 <a><form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
