show doc questions

--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -8,6 +8,7 @@
     <a href="{% url 'articles:purchasePoint' %}">Buy Point</a>
     <a href="{% url 'articles:canvas' %}">Question Maker</a>
     <a href="{% url 'articles:user_profile' %}">User Profile</a>
+    <a href="{% url 'articles:lessThanSix' %}">Download Questions For small classes</a>
 <a><form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
                                         {% csrf_token %}
                             <button type="submit" class="cr-btn cr-btn-sm">Logout</button>
