--- a/ots/main/templates/main/englishQuestions.html
+++ b/ots/main/templates/main/englishQuestions.html
@@ -15,6 +15,13 @@
   						<option value="5">Class 5</option>
     				</select>
         </div>
+        <div  class="form-input-wide" data-layout="half">
+           <select class="time-dropdown form-dropdown" name="paper-Input" id="paper-Input">
+			   			<option value="">Select a Paper</option>
+  						<option value="english1">1st Paper</option>
+                        <option value="english2">2nd Paper</option>
+    				</select>
+        </div>
          <button type="submit" class="form-submit-button submit-button jf-form-buttons">
               Submit
             </button>
