admit card generator complete

--- a/ots/main/templates/main/admitCardGen.html
+++ b/ots/main/templates/main/admitCardGen.html
@@ -72,9 +72,11 @@ h1 {
 	<div class="row" align="center">
       <h1>{{ instName }}</h1>
     </div>
-    <br>
     <div class="row" align="center">
       <h1>{{ exam }}</h1>
+    </div>
+    <div class="row" align="center">
+      <h1>Admit Card</h1>
     </div>
     <div class="row">
       <div class="col-25">
@@ -118,7 +120,7 @@ h1 {
     </div>
 	<br>
     <div class="row">
-        <p>এতদ্বরা “শহীদ নিয়মত এডুকেশন হোম” এর সকল ছাত্র/ছাত্রী ও অভিভাবকদের জানানো যাচ্ছে যে, ছাত্র/ছাত্রীদের  পরীক্ষা শুরু হওয়ার ১৫মিনিট পূর্বে প্রবেশ পত্র সাথে নিয়ে পরীক্ষার হলে প্রবেশ করতে হবে।</p>
+        <p>এতদ্বরা “{{ instName }}” এর সকল ছাত্র/ছাত্রী ও অভিভাবকদের জানানো যাচ্ছে যে, ছাত্র/ছাত্রীদের  পরীক্ষা শুরু হওয়ার ১৫মিনিট পূর্বে প্রবেশ পত্র সাথে নিয়ে পরীক্ষার হলে প্রবেশ করতে হবে।</p>
     </div>
     <div class="row">
         <p align="right">প্রধান শিক্ষক<br>
