--- a/ots/main/templates/main/admitCard.html
+++ b/ots/main/templates/main/admitCard.html
@@ -130,6 +130,9 @@ input[type=submit]:hover {
       <div class="col-75">
         <input type="text" id="roll" name="roll-number" placeholder="Student's Roll Number..">
       </div>
+      <div class="col-75">
+        <input type="text" id="headmaster" name="head-master" placeholder="Headmasters Name..">
+      </div>
     </div>
 	<br>
     <div class="row">
