--- a/ots/main/templates/main/admitCardGen.html
+++ b/ots/main/templates/main/admitCardGen.html
@@ -124,7 +124,7 @@ h1 {
     </div>
     <div class="row">
         <p align="right">প্রধান শিক্ষক<br>
-মোঃ হাসানুল ইসলাম
+            {{ headMaster }}
 </p>
     </div>
 </div>
