admit card added to homepage

--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -84,7 +84,7 @@
 								<li class="menu-parent">Routine & Admit
 									<ul class="sub-menu">
 										<li><a href="#">Routine</a></li>
-										<li><a href="#">Admit Card</a></li>
+										<li><a href="{% url 'articles:admitCard' %}">Admit Card</a></li>
 									</ul>
 								</li>
 								<li><a href="">Lecture Planning</a></li>
