--- a/ots/main/templates/main/homepage.html
+++ b/ots/main/templates/main/homepage.html
@@ -87,7 +87,7 @@
 										<li><a href="{% url 'articles:admitCard' %}">Admit Card</a></li>
 									</ul>
 								</li>
-								<li><a href="">Lecture Planning</a></li>
+								<li><a href="{% url 'articles:classSugesstionChoser' %}">Lecture Planning</a></li>
 								<li><a href="">Portal</a></li>
 								<li><a href="">About</a></li>
 								<li><a href="{% url 'articles:user_profile' %}"><img src="/static/images/user.png" width="25" height="27"></a></li>
