--- a/ots/main/templates/main/suggesstion_class.html
+++ b/ots/main/templates/main/suggesstion_class.html
@@ -5,6 +5,20 @@
     Suggession
 </head>
 <body>
-Class Suggestions
+Class Suggestions <br>
+Today is {{ weekday }} <br>
+Bangla Suggestion: {{ bangla }} <br>
+English Suggestion: {{ english }} <br>
+Math Suggestion: {{ math }} <br>
+Science Suggestion: {{ science }} <br>
+Social Science Suggestion: {{ social }} <br>
+Islam Suggestion: {{ islamReligion }} <br>
+Hindu Suggestion: {{ hinduReligion }} <br>
+Boudhu Suggestion: {{ boudhuReligion }} <br>
+Cristan Suggestion: {{ cristantianReligion }} <br>
+Arts and Crafts Suggestion: {{ artsAndCrafts }} <br>
+Physical Education Suggestion: {{ physicalEducation }} <br>
+Music Suggestion: {{ music }} <br>
+Comment: {{ comment }} <br>
 </body>
 </html>
